--- a/pages/CriarCiclo.html
+++ b/pages/CriarCiclo.html
@@ -4,18 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../style/css/bootstrap.min.css">
     <title>Tentativa</title>
 </head>
 
 <body class="bg-dark text-white">
+<div class = "navBarDiv"></div>
 
     <div class="container-fluid p-4">
 
         <div class="row justify-content-between gap-2">
 
             <!-- COLUNA DO FORM -->
-            <div class="col-6 col-md-3 bg-light text-dark p-4 rounded-3" style="height: 300px;">
+            <div class="col-6 col-md-3 bg-light text-dark p-4 rounded-3" style="height: 320px;">
 
                 <form id="gerarMaterias">
                     <label class="form-label" for="Numaterias">
@@ -50,8 +51,9 @@
 
     </div>
 
-    <script src="script2.js"></script>
-    <script src="style/js/bootstrap.min.js"></script>
+    <script src="../script/CriarCicloScript.js"></script>            
+    <script src="../script/Menu.js"></script>
+    <script src="../style/js/bootstrap.min.js"></script>
 </body>
 
 </html>
