--- a/pages/tabelaCiclo.html
+++ b/pages/tabelaCiclo.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../style/css/bootstrap.min.css">
     <title>Tentativa2</title>
 </head>
 <body class = "bg-dark text-white">
+<div class = "navBarDiv"></div>
 
     <div class = "container-fluid p-0 mb-0 d-flex flex allign-items-center justify-content-center flex-column">
 
         <div class = "col-8 bg-light text-dark mx-auto p-4 mt-4 rounded-3 alignt-items-">
             <div id = "containerCiclo"></div>
+            <button class="btn btn-primary" onclick="apagarCiclo()">Apagar Ciclo</button>
         </div>
 
         <div class="col-4 col-md-2 ">
@@ -20,7 +22,8 @@
 
     </div>
 
-<script src="script3.js"></script>
-<script src="style/js/bootstrap.min.js"></script>
+<script src="../script/TabelaCiclo.js"></script>    
+<script src="../script/Menu.js"></script>
+<script src="../style/js/bootstrap.min.js"></script>
 </body>
 </html>
