aquele commit deu errado,agora vai dar certo

--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="../style/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="style/css/bootstrap.min.css">
     <title>Ciclo de estudos</title>
 </head>
 <body class="bg-dark text-white">
@@ -54,7 +54,7 @@
     
     </div>
 
-    <script src="../script/Menu.js"></script>
-    <script src="../style/js/bootstrap.min.js"></script>
+    <script src="script/Menu.js"></script>
+    <script src="style/js/bootstrap.min.js"></script>
 </body>
 </html>
