--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <h2 class="text-start text-dark p-0">Agora faça seu ciclo rápido e fácil</h2>
                 <p class="text-start text-dark p-0">Acesse nosso site de criação de ciclo de estudos para criar seu plano personalizado rápido, fácil e GRATUITO: <div class="btn btn-primary m-2">
-                    <a href="../pages/CriarCiclo.html" class="text-decoration-none text-light">Criar Ciclo</a>
+                    <a href="pages/CriarCiclo.html" class="text-decoration-none text-light">Criar Ciclo</a>
                 </div></p>
             </div>
 
