Corrigi os erros

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="bg-light col-10 col-md-8 bg-light text-dark p-3 rounded-3 ">
 
                 <h2 class="text-start text-dark p-0">O que é um ciclo de estudos?</h2>
-                <p class="text-start text-dark p-0">Antes de montar, seu ciclo de estudos, entenda o que é um cíclo. Se você quer apenas fazer seu cíclo <a href="Ciclo.html">clique aqui.</a></p>
+                <p class="text-start text-dark p-0">Antes de montar, seu ciclo de estudos, entenda o que é um cíclo. Se você quer apenas fazer seu cíclo <a href="pages/CriarCiclo.html">clique aqui.</a></p>
                 <p class="text-start text-dark p-0">Muitos estudantes utilizam o tradicional cronograma de estudos, onde se define exatamente o que estudar em cada dia e horário da semana. No entanto, esse modelo apresenta falhas críticas, como a falta de flexibilidade: se algo inesperado acontece, o estudante não consegue cumprir a meta do dia, o que acaba desorganizando todo o restante da semana.</p>
                 <p class="text-start text-dark p-1">O Ciclo de Estudos surge como uma alternativa mais eficiente e adaptável à realidade. Em vez de se prender a calendários rígidos, você foca em uma sequência de matérias que se ajusta ao seu tempo disponível.</p>
 
